--- a/css_files/main.css
+++ b/css_files/main.css
@@ -30,6 +30,19 @@ body {
       background-color: #111;
     }
 
+    ul {
+      position: fixed;
+      top: 0;
+      width: 100%;
+    }
+
     .active {
       background-color: #111;
+    }
+    h2 {
+      text-align: center;
+    }
+    div {
+      text-align: center;
+      line-height: 1.8;
     }
