--- a/css_files/main.css
+++ b/css_files/main.css
@@ -30,7 +30,7 @@ body {
       background-color: #111;
     }
 
-    ul {
+    ul.nav-bar {
       position: fixed;
       top: 0;
       width: 100%;
