more styling updates

--- a/css_files/quiz.css
+++ b/css_files/quiz.css
@@ -12,3 +12,6 @@ div.container div.card{
   div.container h6.card-subtitle{
     font-size: 1.5rem;
   }
+input[type=submit]{
+  background-color: aqua;
+}
