--- a/css_files/main.css
+++ b/css_files/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://lh3.googleusercontent.com/QIyHPiQCAIRpYGz5gOR4C13_QiMEAmd02Io53FXUHg-UVHDd84_asM_3aKIS7pKCQ7H9fvt6SSm8CsUWdbUMdqAxBIPAebCECEj9bvsYXVbcry3iUo2rC3y7VkUOnX70pGILRDECtXrOyPPahjX9zebUtAUjDg4OUUGv-2MJwIc5uJzZDn8pbLAvS3JKNbjZ5phaRuLkzt1VTgtoT00oMM4tLu95gUYZl7_9hSecJjxARrrJKQHxNdJ7lJqei7H2vPRTRB3n_153mX8cstZ9KvXz55I-yTTQelTDUQxj2THip4JxuCXcMC8RdNsOwMOpcdODeGcFfPth2kv6ezJtJkF5dP81fhLMRTDjE726p7tPzjeklMP6Jqfh-fCP_Re0diRQx6QXU3Gi6iSQiAuKKzDgHA5QHGfp64IN8mRIkbxhwZn_c-T7SFmdHmqf0PeSR3xU-O5_JxIMwGwI0GVNw6ODe6CUo1jzKlThr1mYM_IeEGgWoLQ9ncP1iPAx67RruXSaFnC4oM329tB6U0pNk9Qfm-vBcDCUiBKGPPkh00APhy_hVWXVRbV1OZ4vZahb3b-nYLso2pM-HvRiocq1RmTgWEi_Kst2Ea6QKDbUDaeTAKK-5OJwq2oX1f8sE54jBImFrZtiMZNNM4NyWdDQCXimo6l6MWxxdzvsKDdfwfXrG6Nuo5tgPU02TjyDTQ=w1271-h794-no?authuser=0");
+  background-image:url("concrete.png");
   background-repeat: repeat;
   /* background-size: cover; */
   color: white;
